--- a/simple_plot.ipynb
+++ b/simple_plot.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "206f5069-9c65-4fca-8634-29b181049475",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "836a69521faf4dc697965c067ec18000",
+       "model_id": "f50fdb19a985467aa7c6115c1e23e604",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=3.0, description='Freq', max=10.0, min=1.0)"
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
       ]
      },
      "metadata": {},
@@ -23,12 +23,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "755e5039b9574e998d60132e0d2dfc7b",
+       "model_id": "980bbd2792e44b46a7b2a422374c3788",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+       "FloatSlider(value=3.0, description='Freq', max=10.0, min=1.0)"
       ]
      },
      "metadata": {},
@@ -42,7 +42,7 @@
     "%matplotlib widget\n",
     "\n",
     "slider = widgets.FloatSlider(value = 3, min = 1, max = 10, description = 'Freq')\n",
-    "display(slider)\n",
+    "#display(slider)\n",
     "x=np.linspace(0,20,1000)\n",
     "\n",
     "fig,ax = plt.subplots()\n",
@@ -56,7 +56,7 @@
     "replot(None)\n",
     "slider.observe(replot)\n",
     "\n",
-    "None"
+    "slider"
    ]
   },
   {
