--- a/simple_plot.ipynb
+++ b/simple_plot.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "206f5069-9c65-4fca-8634-29b181049475",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f50fdb19a985467aa7c6115c1e23e604",
+       "model_id": "c58671922aff40499852432fa4c83373",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+       "FloatSlider(value=3.0, description='Freq', max=10.0, min=1.0)"
       ]
      },
      "metadata": {},
@@ -23,12 +23,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "980bbd2792e44b46a7b2a422374c3788",
+       "model_id": "be910e00136d43048aa51bb0fed5168e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=3.0, description='Freq', max=10.0, min=1.0)"
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
       ]
      },
      "metadata": {},
@@ -39,10 +39,10 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import ipywidgets as widgets\n",
-    "%matplotlib widget\n",
+    "#%matplotlib widget\n",
     "\n",
     "slider = widgets.FloatSlider(value = 3, min = 1, max = 10, description = 'Freq')\n",
-    "#display(slider)\n",
+    "display(slider)\n",
     "x=np.linspace(0,20,1000)\n",
     "\n",
     "fig,ax = plt.subplots()\n",
@@ -54,9 +54,10 @@
     "    fig.canvas.draw()\n",
     "\n",
     "replot(None)\n",
-    "slider.observe(replot)\n",
+    "fig.show()\n",
     "\n",
-    "slider"
+    "slider.observe(replot)\n",
+    "\n"
    ]
   },
   {
