--- a/simple_plot.ipynb
+++ b/simple_plot.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "206f5069-9c65-4fca-8634-29b181049475",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c58671922aff40499852432fa4c83373",
+       "model_id": "c9a931f2466d492487bec33a36f30d63",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=3.0, description='Freq', max=10.0, min=1.0)"
+       "VBox(children=(FloatSlider(value=3.0, description='Freq', max=10.0, min=1.0), Output()))"
       ]
      },
      "metadata": {},
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be910e00136d43048aa51bb0fed5168e",
+       "model_id": "9de5111a84384365976a293cbbc56aa4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,24 +39,35 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import ipywidgets as widgets\n",
-    "#%matplotlib widget\n",
+    "%matplotlib widget\n",
+    "\n",
+    "#plt.ioff()\n",
     "\n",
     "slider = widgets.FloatSlider(value = 3, min = 1, max = 10, description = 'Freq')\n",
-    "display(slider)\n",
+    "plot_out = widgets.Output()\n",
+    "outp = widgets.VBox([slider,plot_out])\n",
+    "display(outp)\n",
+    "\n",
     "x=np.linspace(0,20,1000)\n",
     "\n",
     "fig,ax = plt.subplots()\n",
     "fig.tight_layout()\n",
-    "def replot(change):\n",
-    "    ax.clear()\n",
-    "    ax.plot(x,np.sin(slider.value*x))\n",
     "\n",
-    "    fig.canvas.draw()\n",
+    "def replot(change):\n",
+    "    plot_out.clear_output(wait=True)\n",
+    "    with plot_out:\n",
+    "        ax.clear()\n",
+    "        ax.plot(x,np.sin(slider.value*x))\n",
+    "        fig.canvas.draw()\n",
+    "    \n",
+    "\n",
     "\n",
     "replot(None)\n",
-    "fig.show()\n",
     "\n",
     "slider.observe(replot)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
