--- a/simple_plot.ipynb
+++ b/simple_plot.ipynb
@@ -2,28 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "206f5069-9c65-4fca-8634-29b181049475",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9a931f2466d492487bec33a36f30d63",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(FloatSlider(value=3.0, description='Freq', max=10.0, min=1.0), Output()))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9de5111a84384365976a293cbbc56aa4",
+       "model_id": "56149284bdcb4adcbfc85bb5719dd2fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -41,30 +27,35 @@
     "import ipywidgets as widgets\n",
     "%matplotlib widget\n",
     "\n",
+    "x=np.linspace(0,20,1000)\n",
+    "fig,ax = plt.subplots()\n",
+    "ax.plot(x,np.sin(2*x))\n",
+    "fig.show()\n",
+    "\n",
     "#plt.ioff()\n",
     "\n",
-    "slider = widgets.FloatSlider(value = 3, min = 1, max = 10, description = 'Freq')\n",
-    "plot_out = widgets.Output()\n",
-    "outp = widgets.VBox([slider,plot_out])\n",
-    "display(outp)\n",
+    "# slider = widgets.FloatSlider(value = 3, min = 1, max = 10, description = 'Freq')\n",
+    "# plot_out = widgets.Output()\n",
+    "# outp = widgets.VBox([slider,plot_out])\n",
+    "# display(outp)\n",
     "\n",
-    "x=np.linspace(0,20,1000)\n",
+    "# x=np.linspace(0,20,1000)\n",
     "\n",
-    "fig,ax = plt.subplots()\n",
-    "fig.tight_layout()\n",
+    "# fig,ax = plt.subplots()\n",
+    "# fig.tight_layout()\n",
     "\n",
-    "def replot(change):\n",
-    "    plot_out.clear_output(wait=True)\n",
-    "    with plot_out:\n",
-    "        ax.clear()\n",
-    "        ax.plot(x,np.sin(slider.value*x))\n",
-    "        fig.canvas.draw()\n",
+    "# def replot(change):\n",
+    "#     plot_out.clear_output(wait=True)\n",
+    "#     with plot_out:\n",
+    "#         ax.clear()\n",
+    "#         ax.plot(x,np.sin(slider.value*x))\n",
+    "#         fig.canvas.draw()\n",
     "    \n",
     "\n",
     "\n",
-    "replot(None)\n",
+    "# replot(None)\n",
     "\n",
-    "slider.observe(replot)\n",
+    "# slider.observe(replot)\n",
     "\n",
     "\n",
     "\n",
