--- a/simple_plot.ipynb
+++ b/simple_plot.ipynb
@@ -25,7 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import ipywidgets as widgets\n",
-    "%matplotlib widget\n",
+    "#%matplotlib widget\n",
     "\n",
     "x=np.linspace(0,20,1000)\n",
     "fig,ax = plt.subplots()\n",
