--- a/simple_plot.ipynb
+++ b/simple_plot.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "206f5069-9c65-4fca-8634-29b181049475",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Cannot change to a different GUI toolkit: notebook. Using widget instead.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56149284bdcb4adcbfc85bb5719dd2fe",
+       "model_id": "229189c64b374391bbf15dcd6dc55669",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +32,9 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import ipywidgets as widgets\n",
-    "#%matplotlib widget\n",
+    "%matplotlib notebook\n",
+    "\n",
+    "\n",
     "\n",
     "x=np.linspace(0,20,1000)\n",
     "fig,ax = plt.subplots()\n",
