--- a/simple_plot.ipynb
+++ b/simple_plot.ipynb
@@ -32,7 +32,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import ipywidgets as widgets\n",
-    "%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "\n",
     "\n",
     "\n",
