--- a/simple_plot.ipynb
+++ b/simple_plot.ipynb
@@ -2,21 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "206f5069-9c65-4fca-8634-29b181049475",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Cannot change to a different GUI toolkit: notebook. Using widget instead.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "229189c64b374391bbf15dcd6dc55669",
+       "model_id": "a2b7bee22afe48828ed7494673946453",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,40 +27,38 @@
     "import ipywidgets as widgets\n",
     "%matplotlib widget\n",
     "\n",
-    "\n",
-    "\n",
-    "x=np.linspace(0,20,1000)\n",
-    "fig,ax = plt.subplots()\n",
-    "ax.plot(x,np.sin(2*x))\n",
-    "fig.show()\n",
+    "# x=np.linspace(0,20,1000)\n",
+    "# fig,ax = plt.subplots()\n",
+    "# ax.plot(x,np.sin(2*x))\n",
+    "# fig.show()\n",
     "\n",
     "#plt.ioff()\n",
     "\n",
-    "# slider = widgets.FloatSlider(value = 3, min = 1, max = 10, description = 'Freq')\n",
-    "# plot_out = widgets.Output()\n",
-    "# outp = widgets.VBox([slider,plot_out])\n",
-    "# display(outp)\n",
+    "slider = widgets.FloatSlider(value = 3, min = 1, max = 10, description = 'Freq')\n",
+    "plot_out = widgets.Output()\n",
+    "outp = widgets.VBox([slider,plot_out])\n",
+    "display(outp)\n",
     "\n",
-    "# x=np.linspace(0,20,1000)\n",
+    "x=np.linspace(0,20,1000)\n",
     "\n",
-    "# fig,ax = plt.subplots()\n",
-    "# fig.tight_layout()\n",
+    "fig,ax = plt.subplots()\n",
+    "fig.tight_layout()\n",
     "\n",
-    "# def replot(change):\n",
-    "#     plot_out.clear_output(wait=True)\n",
-    "#     with plot_out:\n",
-    "#         ax.clear()\n",
-    "#         ax.plot(x,np.sin(slider.value*x))\n",
-    "#         fig.canvas.draw()\n",
+    "def replot(change):\n",
+    "    plot_out.clear_output(wait=True)\n",
+    "    with plot_out:\n",
+    "        ax.clear()\n",
+    "        ax.plot(x,np.sin(slider.value*x))\n",
+    "        fig.canvas.draw()\n",
     "    \n",
     "\n",
     "\n",
-    "# replot(None)\n",
+    "replot(None)\n",
     "\n",
-    "# slider.observe(replot)\n",
+    "slider.observe(replot)\n",
     "\n",
     "\n",
-    "\n",
+    "None\n",
     "\n"
    ]
   },
