--- a/plot_fares.ipynb
+++ b/plot_fares.ipynb
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "79eb732b-f2ba-4420-9be9-e63899940f81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60245ae1f8284e89985db2d9ee98ee41",
+       "model_id": "0ca5368dc0dc4ffd93cc19f8496c36d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,7 +89,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ce84955aa6f4110ad55b5a43dcf9c48",
+       "model_id": "b4764898479d47c8b121ab95bc7e9c72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,16 +131,23 @@
     "plot_sel(None)\n",
     "[cl.observe(plot_sel) for cl in check_list]\n",
     "\n",
-    "None\n"
+    "None\n",
+    "\n",
+    "# link_to_view_edit = 'https://docs.google.com/spreadsheets/d/1U3UlqFHcbvpml8QwxAMaEMRqDGM2bqYO?rtpof=true&authuser=claudiooton%40gmail.com&usp=drive_fs'\n",
+    "# #link = widgets.HTML('Link to change flight monitor table:')\n",
+    "# link = widgets.HTML(value=\"<a href=\"\"https://docs.google.com/spreadsheets/d/1U3UlqFHcbvpml8QwxAMaEMRqDGM2bqYO?rtpof=true&authuser=claudiooton%40gmail.com&usp=drive_fs\"\" target=\"\"_blank\"\">Click here to edit flight monitor table</a>\")\n",
+    "\n",
+    "# #display(text)\n",
+    "# display(link)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0aebb2e2-9f9f-4206-ad7c-a36f6f874c34",
+   "cell_type": "markdown",
+   "id": "0ae46a9a-c6d4-4910-8f60-20e1be7cb7be",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<a href=\"https://docs.google.com/spreadsheets/d/1U3UlqFHcbvpml8QwxAMaEMRqDGM2bqYO?rtpof=true&authuser=claudiooton%40gmail.com&usp=drive_fs\" target=\"_blank\">Click here to edit flight monitor table</a>"
+   ]
   }
  ],
  "metadata": {
