--- a/plot_fares.ipynb
+++ b/plot_fares.ipynb
@@ -67,6 +67,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3cabaa8d-5b56-4d8d-8710-60e6c040c9da",
+   "metadata": {},
+   "source": [
+    "### Ryan air monitoring app\n",
+    "Indicate the labels to display to plot the price evolution.\n",
+    "You can toggle the zoom on the lateral sidebar."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "79eb732b-f2ba-4420-9be9-e63899940f81",
