--- a/plot_fares.ipynb
+++ b/plot_fares.ipynb
@@ -189,7 +189,7 @@
    "source": [
     "### Ryan air monitoring app\n",
     "Indicate the labels to display to plot the price evolution.\n",
-    "You can toggle the zoom on the lateral sidebar."
+    "You can toggle the zoom on the lateral sidebar, and you can toggle the visibility of the lines by clicking on the legend lines."
    ]
   },
   {
