--- a/plot_fares.ipynb
+++ b/plot_fares.ipynb
@@ -19,125 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "0c9b82a0-4063-4d2e-acc1-ae194b0bab8b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query date\tLabel\tID\tOrigin\tDestination\tDate\tPrice\tFlight number\tFlight string\tPrice Updated\n",
-      "2022-10-08 01:28:40\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t260.79\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1665150109000\n",
-      "2022-10-08 01:28:40\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t229.19\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1665162458000\n",
-      "2022-10-08 01:28:40\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t229.19\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1665127313000\n",
-      "2022-10-08 01:28:40\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t354.42\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1665162460000\n",
-      "2022-10-08 01:28:40\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t229.19\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1665156559000\n",
-      "2022-10-09 14:41:37\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t260.79\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1665300187000\n",
-      "2022-10-09 14:41:37\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t229.19\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1665299868000\n",
-      "2022-10-09 14:41:37\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t230.59\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1665299882000\n",
-      "2022-10-09 14:41:37\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t354.42\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1665299971000\n",
-      "2022-10-09 14:41:37\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t229.19\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1665300889000\n",
-      "2022-10-13 22:30:02\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t260.79\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1665645624000\n",
-      "2022-10-13 22:30:02\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t229.19\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1665645514000\n",
-      "2022-10-13 22:30:02\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t229.19\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1665645877000\n",
-      "2022-10-13 22:30:02\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t354.42\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1665646463000\n",
-      "2022-10-13 22:30:02\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t229.19\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1665645915000\n",
-      "2022-10-18 22:06:47\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t300.49\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1666121555000\n",
-      "2022-10-18 22:06:47\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t230.59\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1666082615000\n",
-      "2022-10-18 22:06:47\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t262.39\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1666121560000\n",
-      "2022-10-18 22:06:47\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t413.31\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1666121499000\n",
-      "2022-10-18 22:06:47\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t260.79\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1666082740000\n",
-      "2022-10-19 00:36:17\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t300.49\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1666121555000\n",
-      "2022-10-19 00:36:17\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t230.59\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1666082615000\n",
-      "2022-10-19 00:36:17\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t262.39\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1666121560000\n",
-      "2022-10-19 00:36:17\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t413.31\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1666121499000\n",
-      "2022-10-19 00:36:17\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t260.79\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1666082740000\n",
-      "2022-10-21 00:10:52\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t300.49\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1666251712000\n",
-      "2022-10-21 00:10:52\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t260.79\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1666251710000\n",
-      "2022-10-21 00:10:52\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t260.79\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1666250920000\n",
-      "2022-10-21 00:10:52\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t413.31\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1666251701000\n",
-      "2022-10-21 00:10:52\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t260.79\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1666284219000\n",
-      "2022-10-22 00:07:42\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t300.49\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1666339899000\n",
-      "2022-10-22 00:07:42\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t260.79\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1666337936000\n",
-      "2022-10-22 00:07:42\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t260.79\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1666336768000\n",
-      "2022-10-22 00:07:42\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t417.21\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1666338224000\n",
-      "2022-10-22 00:07:42\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t310.91\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1666360489000\n",
-      "2022-10-22 00:12:04\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t300.49\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1666339899000\n",
-      "2022-10-22 00:12:04\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t260.79\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1666337936000\n",
-      "2022-10-22 00:12:04\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t260.79\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1666336768000\n",
-      "2022-10-22 00:12:04\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t417.21\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1666338224000\n",
-      "2022-10-22 00:12:04\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t310.91\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1666360489000\n",
-      "2022-10-22 00:37:29\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t300.49\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1666339899000\n",
-      "2022-10-22 00:37:29\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t260.79\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1666337936000\n",
-      "2022-10-22 00:37:29\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t260.79\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1666336768000\n",
-      "2022-10-22 00:37:29\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t417.21\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1666338224000\n",
-      "2022-10-22 00:37:29\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t310.91\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1666360489000\n",
-      "2022-10-22 00:37:29\tPalma\t6\tPSA\tPMI\t2023-04-03T08:00:00\t69.99\tFR1485\tFR~1485~ ~~PSA~04/03/2023 08:00~PMI~04/03/2023 09:40~~\t1666292539000\n",
-      "2022-10-22 00:37:29\tPalma\t7\tPMI\tPSA\t2023-04-10T10:15:00\t126.99\tFR1486\tFR~1486~ ~~PMI~04/10/2023 10:15~PSA~04/10/2023 11:55~~\t1666279592000\n",
-      "2022-10-22 00:37:29\tPalma\t8\tPSA\tPMI\t2023-04-06T06:05:00\t80.99\tFR1485\tFR~1485~ ~~PSA~04/06/2023 06:05~PMI~04/06/2023 07:45~~\t1666098701000\n",
-      "2022-10-22 00:37:29\tPalma\t9\tPMI\tPSA\t2023-04-13T08:20:00\t93.99\tFR1486\tFR~1486~ ~~PMI~04/13/2023 08:20~PSA~04/13/2023 10:00~~\t1666098672000\n",
-      "2022-10-22 00:37:29\tPalma\t10\tPSA\tPMI\t2023-04-20T06:05:00\t52.99\tFR1485\tFR~1485~ ~~PSA~04/20/2023 06:05~PMI~04/20/2023 07:45~~\t1666363303000\n",
-      "2022-10-22 00:37:29\tPalma\t11\tPMI\tPSA\t2023-04-27T08:20:00\t59.99\tFR1486\tFR~1486~ ~~PMI~04/27/2023 08:20~PSA~04/27/2023 10:00~~\t1666360216000\n",
-      "2022-10-23 00:12:18\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t300.49\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1666424519000\n",
-      "2022-10-23 00:12:18\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t260.79\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1666424289000\n",
-      "2022-10-23 00:12:18\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t260.79\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1666423095000\n",
-      "2022-10-23 00:12:18\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t417.21\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1666423058000\n",
-      "2022-10-23 00:12:18\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t310.91\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1666423716000\n",
-      "2022-10-23 00:12:18\tPalma\t6\tPSA\tPMI\t2023-04-03T08:00:00\t70.99\tFR1485\tFR~1485~ ~~PSA~04/03/2023 08:00~PMI~04/03/2023 09:40~~\t1666465896000\n",
-      "2022-10-23 00:12:18\tPalma\t7\tPMI\tPSA\t2023-04-10T10:15:00\t127.99\tFR1486\tFR~1486~ ~~PMI~04/10/2023 10:15~PSA~04/10/2023 11:55~~\t1666467682000\n",
-      "2022-10-23 00:12:18\tPalma\t8\tPSA\tPMI\t2023-04-06T06:05:00\t80.99\tFR1485\tFR~1485~ ~~PSA~04/06/2023 06:05~PMI~04/06/2023 07:45~~\t1666098701000\n",
-      "2022-10-23 00:12:18\tPalma\t9\tPMI\tPSA\t2023-04-13T08:20:00\t93.99\tFR1486\tFR~1486~ ~~PMI~04/13/2023 08:20~PSA~04/13/2023 10:00~~\t1666098672000\n",
-      "2022-10-23 00:12:18\tPalma\t10\tPSA\tPMI\t2023-04-20T06:05:00\t51.99\tFR1485\tFR~1485~ ~~PSA~04/20/2023 06:05~PMI~04/20/2023 07:45~~\t1666449704000\n",
-      "2022-10-23 00:12:18\tPalma\t11\tPMI\tPSA\t2023-04-27T08:20:00\t59.99\tFR1486\tFR~1486~ ~~PMI~04/27/2023 08:20~PSA~04/27/2023 10:00~~\t1666360216000\n",
-      "2022-10-24 00:12:13\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t300.49\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1666510931000\n",
-      "2022-10-24 00:12:13\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t260.79\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1666510704000\n",
-      "2022-10-24 00:12:13\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t260.79\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1666509578000\n",
-      "2022-10-24 00:12:13\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t417.21\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1666509480000\n",
-      "2022-10-24 00:12:13\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t310.91\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1666510134000\n",
-      "2022-10-24 00:12:13\tPalma\t6\tPSA\tPMI\t2023-04-03T08:00:00\t69.99\tFR1485\tFR~1485~ ~~PSA~04/03/2023 08:00~PMI~04/03/2023 09:40~~\t1666552294000\n",
-      "2022-10-24 00:12:13\tPalma\t7\tPMI\tPSA\t2023-04-10T10:15:00\t126.99\tFR1486\tFR~1486~ ~~PMI~04/10/2023 10:15~PSA~04/10/2023 11:55~~\t1666554439000\n",
-      "2022-10-24 00:12:13\tPalma\t8\tPSA\tPMI\t2023-04-06T06:05:00\t80.99\tFR1485\tFR~1485~ ~~PSA~04/06/2023 06:05~PMI~04/06/2023 07:45~~\t1666098701000\n",
-      "2022-10-24 00:12:13\tPalma\t9\tPMI\tPSA\t2023-04-13T08:20:00\t93.99\tFR1486\tFR~1486~ ~~PMI~04/13/2023 08:20~PSA~04/13/2023 10:00~~\t1666098672000\n",
-      "2022-10-24 00:12:13\tPalma\t10\tPSA\tPMI\t2023-04-20T06:05:00\t51.99\tFR1485\tFR~1485~ ~~PSA~04/20/2023 06:05~PMI~04/20/2023 07:45~~\t1666501596000\n",
-      "2022-10-24 00:12:13\tPalma\t11\tPMI\tPSA\t2023-04-27T08:20:00\t59.99\tFR1486\tFR~1486~ ~~PMI~04/27/2023 08:20~PSA~04/27/2023 10:00~~\t1666360216000\n",
-      "2022-10-25 00:12:19\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t300.49\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1666597060000\n",
-      "2022-10-25 00:12:19\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t260.79\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1666629915000\n",
-      "2022-10-25 00:12:19\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t260.79\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1666596905000\n",
-      "2022-10-25 00:12:19\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t417.21\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1666596663000\n",
-      "2022-10-25 00:12:19\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t310.91\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1666597086000\n",
-      "2022-10-25 00:12:19\tPalma\t6\tPSA\tPMI\t2023-04-03T08:00:00\t69.99\tFR1485\tFR~1485~ ~~PSA~04/03/2023 08:00~PMI~04/03/2023 09:40~~\t1666573937000\n",
-      "2022-10-25 00:12:19\tPalma\t7\tPMI\tPSA\t2023-04-10T10:15:00\t126.99\tFR1486\tFR~1486~ ~~PMI~04/10/2023 10:15~PSA~04/10/2023 11:55~~\t1666554439000\n",
-      "2022-10-25 00:12:19\tPalma\t8\tPSA\tPMI\t2023-04-06T06:05:00\t80.99\tFR1485\tFR~1485~ ~~PSA~04/06/2023 06:05~PMI~04/06/2023 07:45~~\t1666098701000\n",
-      "2022-10-25 00:12:19\tPalma\t9\tPMI\tPSA\t2023-04-13T08:20:00\t93.99\tFR1486\tFR~1486~ ~~PMI~04/13/2023 08:20~PSA~04/13/2023 10:00~~\t1666098672000\n",
-      "2022-10-25 00:12:19\tPalma\t10\tPSA\tPMI\t2023-04-20T06:05:00\t51.99\tFR1485\tFR~1485~ ~~PSA~04/20/2023 06:05~PMI~04/20/2023 07:45~~\t1666501596000\n",
-      "2022-10-25 00:12:19\tPalma\t11\tPMI\tPSA\t2023-04-27T08:20:00\t59.99\tFR1486\tFR~1486~ ~~PMI~04/27/2023 08:20~PSA~04/27/2023 10:00~~\t1666360216000\n",
-      "2022-10-26 00:12:18\tNavidad\t1\tPSA\tTFS\t2022-12-29T11:45:00\t279.49\tFR7476\tFR~7476~ ~~PSA~12/29/2022 11:45~TFS~12/29/2022 15:15~~\t1666715078000\n",
-      "2022-10-26 00:12:18\tNavidad\t2\tPSA\tTFS\t2022-12-31T06:55:00\t262.39\tFR7476\tFR~7476~ ~~PSA~12/31/2022 06:55~TFS~12/31/2022 10:25~~\t1666683709000\n",
-      "2022-10-26 00:12:18\tNavidad\t3\tTFS\tPSA\t2023-01-05T15:50:00\t262.39\tFR7477\tFR~7477~ ~~TFS~01/05/2023 15:50~PSA~01/05/2023 21:00~~\t1666683826000\n",
-      "2022-10-26 00:12:18\tNavidad\t4\tTFS\tPSA\t2023-01-07T11:00:00\t391.86\tFR7477\tFR~7477~ ~~TFS~01/07/2023 11:00~PSA~01/07/2023 16:10~~\t1666715076000\n",
-      "2022-10-26 00:12:18\tNavidad\t5\tTFS\tPSA\t2023-01-09T10:15:00\t310.91\tFR7477\tFR~7477~ ~~TFS~01/09/2023 10:15~PSA~01/09/2023 15:25~~\t1666682741000\n",
-      "2022-10-26 00:12:18\tPalma\t6\tPSA\tPMI\t2023-04-03T08:00:00\t69.99\tFR1485\tFR~1485~ ~~PSA~04/03/2023 08:00~PMI~04/03/2023 09:40~~\t1666573937000\n",
-      "2022-10-26 00:12:18\tPalma\t7\tPMI\tPSA\t2023-04-10T10:15:00\t126.99\tFR1486\tFR~1486~ ~~PMI~04/10/2023 10:15~PSA~04/10/2023 11:55~~\t1666554439000\n",
-      "2022-10-26 00:12:18\tPalma\t8\tPSA\tPMI\t2023-04-06T06:05:00\t80.99\tFR1485\tFR~1485~ ~~PSA~04/06/2023 06:05~PMI~04/06/2023 07:45~~\t1666098701000\n",
-      "2022-10-26 00:12:18\tPalma\t9\tPMI\tPSA\t2023-04-13T08:20:00\t93.99\tFR1486\tFR~1486~ ~~PMI~04/13/2023 08:20~PSA~04/13/2023 10:00~~\t1666098672000\n",
-      "2022-10-26 00:12:18\tPalma\t10\tPSA\tPMI\t2023-04-20T06:05:00\t51.99\tFR1485\tFR~1485~ ~~PSA~04/20/2023 06:05~PMI~04/20/2023 07:45~~\t1666501596000\n",
-      "2022-10-26 00:12:18\tPalma\t11\tPMI\tPSA\t2023-04-27T08:20:00\t59.99\tFR1486\tFR~1486~ ~~PMI~04/27/2023 08:20~PSA~04/27/2023 10:00~~\t1666360216000\n",
-      "2022-10-26 00:12:18\tPMI verano\t14\tPSA\tPMI\t2023-08-28T08:00:00\t109.99\tFR1485\tFR~1485~ ~~PSA~08/28/2023 08:00~PMI~08/28/2023 09:40~~\t1666729600000\n",
-      "2022-10-26 00:12:18\tPMI verano\t15\tPMI\tPSA\t2023-09-04T10:15:00\t126.99\tFR1486\tFR~1486~ ~~PMI~09/04/2023 10:15~PSA~09/04/2023 11:55~~\t1666528314000\n",
-      "2022-10-26 00:12:18\tPMI verano\t16\tPSA\tPMI\t2023-09-04T08:00:00\t108.99\tFR1485\tFR~1485~ ~~PSA~09/04/2023 08:00~PMI~09/04/2023 09:40~~\t1666555420000\n",
-      "2022-10-26 00:12:18\tPMI verano\t17\tPMI\tPSA\t2023-09-11T10:15:00\t93.99\tFR1486\tFR~1486~ ~~PMI~09/11/2023 10:15~PSA~09/11/2023 11:55~~\t1666099576000\n",
-      "2022-10-26 00:12:18\tTFS verano\t18\tPSA\tTFS\t2023-07-26T11:30:00\t143.99\tFR7476\tFR~7476~ ~~PSA~07/26/2023 11:30~TFS~07/26/2023 15:05~~\t1666098708000\n",
-      "2022-10-26 00:12:18\tTFS verano\t19\tPSA\tTFS\t2023-08-02T11:30:00\t143.99\tFR7476\tFR~7476~ ~~PSA~08/02/2023 11:30~TFS~08/02/2023 15:05~~\t1666100497000\n",
-      "2022-10-26 00:12:18\tTFS verano\t20\tPSA\tTFS\t2023-08-23T11:30:00\t143.99\tFR7476\tFR~7476~ ~~PSA~08/23/2023 11:30~TFS~08/23/2023 15:05~~\t1666099607000\n",
-      "2022-10-26 00:12:18\tTFS verano\t21\tTFS\tPSA\t2023-08-16T15:40:00\t126.99\tFR7477\tFR~7477~ ~~TFS~08/16/2023 15:40~PSA~08/16/2023 20:40~~\t1666099722000\n",
-      "2022-10-26 00:12:18\tTFS verano\t22\tTFS\tPSA\t2023-08-23T15:40:00\t163.99\tFR7477\tFR~7477~ ~~TFS~08/23/2023 15:40~PSA~08/23/2023 20:40~~\t1666099721000\n",
-      "2022-10-26 00:12:18\tTFS verano\t23\tTFS\tPSA\t2023-09-06T15:40:00\t163.99\tFR7477\tFR~7477~ ~~TFS~09/06/2023 15:40~PSA~09/06/2023 20:40~~\t1666099720000\n",
-      "2022-10-26 00:12:18\tTFS verano\t24\tTFS\tPSA\t2023-08-09T15:40:00\t126.99\tFR7477\tFR~7477~ ~~TFS~08/09/2023 15:40~PSA~08/09/2023 20:40~~\t1666099720000\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#ftp server data\n",
     "hostname = \"ftpupload.net\"\n",
@@ -167,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "a05a6f63-5f72-41c0-9a57-f93d7c87cdf7",
    "metadata": {},
    "outputs": [],
@@ -194,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "79eb732b-f2ba-4420-9be9-e63899940f81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1ca18accc5842e3b1889efefdbc7e2c",
+       "model_id": "25b6824adf724d259e4f09799444508f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,7 +100,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd9084bc91a149448bef659cbbbdc162",
+       "model_id": "07ca6ec2d321487183722bc40a4a9334",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,6 +145,7 @@
     "def plot_sel(change):\n",
     "    ax.clear()\n",
     "    line_list = []\n",
+    "    time_offset = 0.\n",
     "    for ii, df_list in enumerate(df_list_ID):\n",
     "        if check_list[ii].value:\n",
     "            for df in df_list:\n",
@@ -269,7 +155,8 @@
     "                    symbol = '.-'\n",
     "                else:\n",
     "                    symbol = '^-'\n",
-    "                line_list += ax.plot(df['Query date'],df['Price'],symbol,label=flight_descript)\n",
+    "                line_list += ax.plot(df['Query date']+datetime.timedelta(0,time_offset),df['Price'],symbol,label=flight_descript)\n",
+    "                time_offset += 1000. #adds a small offset of 1000 seconds in the x to make coincidental points visible\n",
     "    leg=ax.legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
     "    leg.get_frame().set_alpha(0.4)\n",
     "    \n",
