--- a/plot_fares.ipynb
+++ b/plot_fares.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e195f53d-70f4-4c6f-b31e-b4014a4589b2",
    "metadata": {},
    "outputs": [],
@@ -19,10 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0c9b82a0-4063-4d2e-acc1-ae194b0bab8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error\n"
+     ]
+    }
+   ],
    "source": [
     "#ftp server data\n",
     "hostname = \"ftpupload.net\"\n",
