--- a/plot_fares.ipynb
+++ b/plot_fares.ipynb
@@ -43,6 +43,7 @@
     "\n",
     "cwd = os.getcwd()\n",
     "print(cwd)\n",
+    "print(os.listdir())\n",
     "\n",
     "if os.path.isfile(filename):\n",
     "    print('File found.')\n",
