--- a/plot_fares.ipynb
+++ b/plot_fares.ipynb
@@ -41,14 +41,14 @@
     "# folder = 'shared_files'\n",
     "filename = 'flight_fares.csv'\n",
     "\n",
-    "cwd = os.getcwd()\n",
-    "print(cwd)\n",
-    "print(os.listdir())\n",
+    "# cwd = os.getcwd()\n",
+    "# print(cwd)\n",
+    "# print(os.listdir())\n",
     "\n",
-    "if os.path.isfile(filename):\n",
-    "    print('File found.')\n",
-    "else:\n",
-    "    print('File not found')\n",
+    "# if os.path.isfile(filename):\n",
+    "#     print('File found.')\n",
+    "# else:\n",
+    "#     print('File not found')\n",
     "\n",
     "#download the file\n",
     "# downloaded_filename = 'downl_'+filename\n",
